--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -10,7 +10,7 @@
      <div class="calculator">
           <div class="calculator-screens">
                <textarea name="calculator-screen-history" class="calculator-screen-history" id="calculator-screen-history" cols="10" rows="3"></textarea>
-               <input type="text" class="calculator-sreen" value="" placeholder="0" disabled />
+               <input type="text" class="calculator-screen" value="" placeholder="0" disabled />
           </div>         
           <div class="calculator-keys">
                <button type="button" class="all-clear" value="all-clear">AC</button>
