--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -9,7 +9,13 @@
 <body>
      <div class="calculator">
           <div class="calculator-screens">
+               <center>
+                    <label for="calculator-screen-history" class="calculator-screen-history-label"> History </label>
+               </center>
                <textarea name="calculator-screen-history" class="calculator-screen-history" id="calculator-screen-history" cols="10" rows="3"></textarea>
+               <center>
+                    <label for="calculator-screen" class="calculator-screen-history-label"> Calculator </label>
+               </center>
                <input type="text" class="calculator-screen" value="" placeholder="0" disabled />
           </div>         
           <div class="calculator-keys">
