Demo Project Files

--- a/WeatherApp/index.html
+++ b/WeatherApp/index.html
@@ -15,15 +15,15 @@
 <body>
      <div class="container">
           <div class="search">
-               <input type="search" name="search-city" id="search-city" placeholder="Search a location">
+               <input type="search" name="search-city" id="search-city" placeholder="Search a City Name">
                <button class="button" id="search-city-btn"><i class="fa-solid fa-magnifying-glass-location fa-2xl"></i></button>
           </div>
           <div class="content" id="content">
-               <span class="element" id="name">INDIA</span><br>
-               <img src="" class="element" id="image"><br>
-               <span class="element" id="temp">34*</span><br>
-               <span class="element" id="climate">Cloudy</span><br>
-               <span class="element" id="timezone">+05:30</span>
+               <span class="element" id="temp"></span><img src="" alt="" class="element" id="image"><br>
+               <span class="element" id="min-max-temp"></span><br>
+               <span class="element" id="name"></span><br>
+               <span class="element" id="climate"></span><br>
+               <span class="element" id="description"></span>
           </div>
      </div>
      <script src="./main.js"></script>
