--- a/NoteTaking/index.html
+++ b/NoteTaking/index.html
@@ -9,31 +9,20 @@
 	<title>Notes</title>
 </head>
 <body>
-     <center>
-     <header>
+     <section class="head">
           <h2>Add Notes</h2>
           <form id="add-notes">
-               <textarea name="notes-text" id="notes-text" cols="50" rows="1"></textarea>
+               <textarea name="notes-text" id="notes-text"></textarea>
                <input type="submit" class="Submit" id="Submit" value="Submit">
           </form>
-     
-     </header>
-     <main>
-          <section class="notes-list">
-               
-               <h3>Saved Note</h3>
+     </section>
+     <section class="section">
+          <div class="div">
+               <h2>Notes</h2>
                <div id="notes">
-                    <!--<div class="noteswarp">
-                         <input class="text" type="text">
-                         <span class="actions">
-                              <button class="edit">Edit</button>
-                              <button class="delete">Delete</button>
-                         </span>
-                    </div>-->
                </div>
-          </section>
-     </main>
-     </center>
+          </div>
+     </section>
      <script src="./main.js"></script>
 </body>
 
