--- a/NoteTaking/index.html
+++ b/NoteTaking/index.html
@@ -12,9 +12,9 @@
           <h2>Add Notes</h2>
           <form id="add-notes">
                <label for="title" id="title">Enter the title here:</label><br>
-               <input type="text" name="title" id="notes-title"><br><br>
+               <input type="text" name="title" id="notes-title" placeholder="Enter new title for your notes"><br><br>
                <label for="body" id="body">Enter the notes here:</label><br>
-               <textarea name="body" id="notes-body"></textarea><br><br>
+               <textarea name="body" id="notes-body" placeholder="Enter your notes here..."></textarea><br><br>
                <input type="submit" class="Submit" id="Submit" value="Submit">
           </form>
      </section>
@@ -38,6 +38,7 @@
                </div>
           </div>
      </section>
+     
      <script src="./js/main.js" type="module"></script>
 </body>
 
